edit chat layout css to prevent image clipping

--- a/components/dating-components/chat-window/styles/ChatLayout.module.scss
+++ b/components/dating-components/chat-window/styles/ChatLayout.module.scss
@@ -10,11 +10,13 @@
     min-width: 350px;
     z-index: 10;
     box-shadow: 10px 0px 20px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
 }
 
 .chatWindow{
     width: 100%;
     height: 100%;
+    background-color: #fff;
 }
 
 .none{
